# Aimbot

./: CMakeLists.txt  README.md  cmake_refresh_VS2019.bat  config.txt  memoryOffsets.txt
include/: Aimbot.h  ConfigData.h  Entity.h  MemoryManager.h  Offsets.h  ToggleButton.h  Vec2D.h  Vec3D.h
src/: Aimbot.cpp  MemoryManager.cpp  Offsets.cpp  ToggleButton.cpp  main.cpp
